<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iMap</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error">错误</string>
    <string name="error_no_internet">没有网络连接</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="userinfo">用户信息</string>
	<string name="username">用户名</string>
	<string name="account">账号</string>
	<string name="signin">注册</string>
	<string name="login">登陆</string>
	<string name="prefer">偏好</string>
	<string name="theme">主题</string>
	<string name="help">帮助</string>
	<string name="selfstart">自启动</string>
	<string name="music">声音</string>
	<string name="infoinforn">消息提示</string>
	<string name="GPS">GPS定位</string>
	<string name="privatesetting">隐私</string>
	<string name="GPSmore">开启GPS精确定位</string>
	<string name="accuntandsafe">账号安全</string>
	<string name="fromgallery">获取图库图片</string>
	<string name="fromcamera">拍照获取图片</string>
	<string name="headportrait">头像</string>
	<string name="newheadportrait">新头像</string>
	<string name="confirm">确定</string>
	<string name="age">年龄</string>
	<string name="gender">性别</string>
	<string name="nickname">昵称</string>
	<string name="none">无</string>
	<string name="man">male</string>
	<string name="woman">female</string>
	<string name="secret">secret</string>
	<string name="noset">未设置</string>
	<string name="changeheadportrait">修改头像</string>
	<string name="SDcardnoexist">SD卡不存在</string>
	<string name="modifynickname">修改昵称</string>
	<string name="modifyage">修改年龄</string>
	<string name="modifyemail">修改邮箱</string>
	<string name="modifymsg">修改签名</string>
	<string name="save">保存</string>
	<string name="space"> </string>
	<string name="email">邮箱</string>
	<string name="msg">个性签名</string>
</resources>
