<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5F5"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <TextView
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="20dip"
        android:background="@android:color/transparent"
        android:text="" />

    <LinearLayout
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dip" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/headportrait"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/headportrail"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/defaultheadportrait" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noset"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/item3"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noset"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="20dip"
        android:background="@android:color/transparent"
        android:text="" />

    <LinearLayout
        android:id="@+id/item4"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/gender"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noset"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/item5"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/msg"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noset"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>