<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F5F5"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <TextView
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="20dip"
        android:background="@android:color/transparent"
        android:text="" />

    <LinearLayout
        android:id="@+id/newheadportrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dip" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:text="@string/newheadportrait"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="70dip"
            android:layout_height="70dip"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/defaultheadportrait" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/fromgallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="gallery"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/fromgallery"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/fromcamera"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="camera"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/fromcamera"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@layout/selectior_white_to_grey"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="confirm"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>