<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF5F5F5"
        android:orientation="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" >

        <include layout="@layout/titlebar" />

        <TextView
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:background="@android:color/transparent"
            android:text="" />

        <LinearLayout
            android:id="@+id/gotouerinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dip" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/userinfo"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>
            
            <ImageView
                android:id="@+id/headportrail"
                android:layout_width="70dip"
                android:layout_height="70dip"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/defaultheadportrait" />
        </LinearLayout>

        <TextView
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:background="@android:color/transparent"
            android:text="" />

        <LinearLayout
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/prefer"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingitem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingpic1"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/imaginechaangelist" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/settingitem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:divider="@android:color/darker_gray"
            android:dividerPadding="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingpic2"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/imaginechaangelist" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/settingitem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingpic3"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/imaginechaangelist" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/settingitem4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingpic4"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/imaginechaangelist" />
        </LinearLayout>

        <TextView
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:background="@android:color/transparent"
            android:text="" />

        <LinearLayout
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/accuntandsafe"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingitem5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingpic5"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/imaginechaangelist" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/settingitem6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:divider="@android:color/darker_gray"
            android:dividerPadding="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingpic6"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/imaginechaangelist" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/settingitem7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingpic7"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/imaginechaangelist" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/settingitem8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Large Text"
                    android:textColor="@android:color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/settingpic8"
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/imaginechaangelist" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/aboutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/selectior_white_to_grey"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/about"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="70dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:paddingRight="8dp"
                android:scaleType="fitXY" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

</ScrollView>